# verl-omni

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  bagel_flowgrpo_debug.md  parse_wandb.py  pyproject.toml  setup.py  test_registry.py
.cursor/rules/: git-push.mdc
.github/: verl_pin.txt
.github/workflows/: check-pr-title.yml  cpu_unit_tests.yml  doc.yml  drop-ready-for-ci-label.yml  gpu_smoke.yml  gpu_smoke_verl_latest.yml  pre-commit.yml  sanity.yml  secrets_scan.yml  type-coverage-check.yml
.run_logs/: PR_BODY_adapter.md  PR_BODY_mixgrpo.md  chain_runs.sh  current_run.pid  current_run_logpath.txt  mixgrpo_ab1_run2.pid  verify_run.pid
docker/: Dockerfile.cuda
docs/: conf.py  index.md
docs/algo/: async_reward.md  diffusion_dpo.md  diffusionnft.md  flowdppo.md  flowgrpo.md  grpo_guard.md  mixgrpo.md  performance.md  rollout_correction.md
docs/api/: pipelines.rst  workers.rst
docs/contributing/: integrating_a_diffusion_model.md  integrating_a_new_algorithm.md  integrating_a_new_algorithm_for_diffusion_model.md  integrating_a_new_policy_gradient_algorithm_for_diffusion_model.md  integrating_a_non_diffusers_model.md
docs/perf/: diffusion_mfu.md  profiler.md
docs/start/: bagel_flowgrpo_quickstart.md  flowgrpo_quickstart.md  flowgrpo_quickstart_npu.md  http_scorer.md  install.md  metrics.md  models.md  multi_node_training.md
examples/dancegrpo_trainer/: README.md  run_qwen_image_ocr_lora.sh
examples/dancegrpo_trainer/data_process/: wan22_hpsv3.py
examples/dancegrpo_trainer/wan22/: run_wan22_5b_t2v_hpsv3_npu.sh
examples/diffusionnft_trainer/: README.md
examples/diffusionnft_trainer/qwen_image/: run_qwen_image_ocr_lora.sh  run_qwen_image_ocr_lora_npu.sh
examples/dpo_trainer/: README.md
examples/flowdppo_trainer/: README.md
examples/flowgrpo_trainer/: README.md  bagel.md  run_bagel_flowgrpo_lora.sh  run_qwen_image_ocr.sh  run_qwen_image_ocr_fsdp2_64cards.sh  run_qwen_image_ocr_lora.sh  run_qwen_image_ocr_lora_async_reward.sh  run_qwen_image_ocr_lora_fsdp2_fa3.sh  run_qwen_image_ocr_lora_local.sh  run_qwen_image_ocr_lora_mixgrpo.sh  run_qwen_image_ocr_lora_multi_node.sh  run_qwen_image_ocr_lora_sp2.sh  run_qwen_image_ocr_veomni_64cards.sh  run_sd35_medium_ocr_lora.sh  run_z_image_ocr_lora.sh
examples/flowgrpo_trainer/bagel/: README.md  bagel.md  (+5 more)
examples/grpoguard_trainer/: README.md  run_qwen_image_ocr_lora.sh
examples/gspo_trainer/: README.md  qwen3_omni_thinker_only.yaml  run_qwen3_omni_thinker_gspo_lora.sh
examples/mixgrpo_trainer/: README.md  run_qwen_image_ocr_lora_mixgrpo.sh
scripts/: accelerate_fsdp_cpu_offload.yaml  accelerate_fsdp_no_prefetch.yaml  bagel_mini_train_probe.sh  bagel_official_one_step_probe.sh  bagel_prompt_lora_probe.py  bagel_strict_parity_probe.sh
scripts/flash_attn_compat/: flash_attn.py  sitecustomize.py
tests/agent_loop/: test_diffusion_agent_loop.py
tests/gpu_smoke/: gpu_test_topology.py  run_gpu_smoke_tests.sh
tests/models/: test_diffusers_fsdp_engine.py
tests/pipelines/: test_diffusion_model_base_on_cpu.py  test_i2i_model_base_on_cpu.py  test_image_edit_interface_on_cpu.py  test_qwen3_omni_thinker_adapter_on_cpu.py
tests/reward_loop/: test_visual_reward_manager.py
tests/special_e2e/: build_qwen3_omni_tiny_random.py  create_dummy_math_data.py  qwen3_omni_thinker_only_smoke.yaml  run_dancegrpo_qwen_image.sh  run_flowgrpo_qwen_image.sh  run_flowgrpo_trainer_diffusers.sh  run_gspo_qwen3_omni_thinker_lora_smoke.sh
tests/special_sanity/: check_device_api_usage.py  check_pr_title.py
tests/utils/: gpu_test_topology.py
tests/workers/: test_diffusers_fsdp_engine.py  test_diffusers_ulysses.py
verl/trainer/: main_flowgrpo.py
verl/workers/: engine_workers.py
verl_omni/: __init__.py
verl_omni/agent_loop/: diffusion_agent_loop.py  omni_agent_loop.py  single_turn_agent_loop.py
verl_omni/pipelines/: __init__.py  _patch.py  model_base.py  non_diffusers_model_base.py  utils.py
verl_omni/reward_loop/: __init__.py
verl_omni/trainer/: main_diffusion.py  main_omni.py
verl_omni/utils/: diffusion_attention.py  fsdp_utils.py
verl_omni/workers/: __init__.py
(+128 files in other folders)
