# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "verl-omni"
dynamic = ["version"]
description = "verl-omni: Easy, fast, and stable RL training for diffusion and omni-modality models"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "cachetools",
    "codetiming",
    "datasets",
    "diffusers>=0.37.1",
    "dill",
    "hydra-core",
    "pandas",
    "peft",
    "pyarrow>=19.0.0",
    "pybind11",
    "pylatexenc",
    "ray[default]",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "torchdata",
    "transformers",
    "wandb",
    "packaging>=20.0",
    "uvicorn",
    "fastapi",
    "latex2sympy2_extended",
    "math_verify",
    "tensorboard",
]

[project.optional-dependencies]
# Rollout engine (install in step 2, after gpu step 1).
vllm-omni = [
    "vllm-omni==0.22.0",
]
# CUDA rollout backend (vllm) + actor FA3 (kernels) + liger-kernel. Install in step 1 on GPU.
gpu = [
    "vllm==0.22.0",
    "kernels==0.14.1",
    "liger-kernel",
]
# Training stack (install in step 2).
# Git commit must match .github/verl_pin.txt (reports as 0.9.0.dev0 at 8a69493).
train = [
    "verl @ git+https://github.com/verl-project/verl.git@8a694930275061f52ebd538c906ef8819af56dbd",
]
dev = [
    "pytest",
    "pre-commit",
    "py-spy",
    "pytest-asyncio",
    "pytest-rerunfailures",
    "Levenshtein",
]
ocr = [
    "Levenshtein",
]

# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
# Note: While the formatter will attempt to format lines such that they remain within the line-length,
# it isn't a hard upper bound, and formatted lines may exceed the line-length.
line-length = 120
exclude = ["scripts/legacy_model_merger.py"]

[tool.ruff.lint]
isort = {known-first-party = ["verl_omni"]}
# c.f. https://github.com/vllm-project/vllm/blob/ce8d6b75fc0586045df75ee1568a5b5f9957251b/pyproject.toml
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # `.log()` statement uses f-string
    "G004",
    # X | None for type annotations
    "UP045",
    # deprecated import
    "UP035",
]

# -------------------------------
# tool.mypy - typechecking config
# -------------------------------
[tool.mypy]
pretty            = true
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "skip"

# Blanket silence
ignore_errors = true

[[tool.mypy.overrides]]
module = [
"verl_omni.trainer.config.algorithm",
]
ignore_errors = false

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
# True means `setuptools` will attempt to include all relevant files in package_data automatically.
# This corresponds to `include_package_data=True` in setup.py.
include-package-data = true

# We read the version from a file in 'verl_omni/version/version'
[tool.setuptools.dynamic]
version = {file = "verl_omni/version/version"}

# If you need to mimic `package_dir={'': '.'}`:
[tool.setuptools.package-dir]
"" = "."

# If you need to include specific non-Python data (like YAML files or version file):
[tool.setuptools.package-data]
verl_omni = [
  "version/*",
  "trainer/config/*.yaml",
  "trainer/config/*/*.yaml",
  "trainer/config/*/*/*.yaml",
]

# -------------------------------
# tool.uv - Package resolution overrides
# -------------------------------
[tool.uv]
override-dependencies = [
    "accelerate>=1.14.0",
]

